# ha-kapso-whatsapp

./: .gitignore  CHANGELOG.md  NOTICE  README.md  RELEASING.md  hacs.json  pyproject.toml  repository.yaml
.github/workflows/: build-waha.yml  release.yml  validate.yml
custom_components/kapso_whatsapp/: __init__.py  api.py  config_flow.py  const.py  diagnostics.py  helpers.py  manifest.json  notify.py  services.yaml  strings.json
custom_components/waha_whatsapp/: __init__.py  config_flow.py  const.py  helpers.py  manifest.json  migration.py  notify.py
custom_components/waha_whatsapp/translations/: en.json
docs/: NOTIFICATION_MIGRATION.md
scripts/: check_version.py
tests/: __init__.py  _loader.py  test_api.py  test_helpers.py  test_metadata.py  test_migration.py  test_waha_app_metadata.py
waha/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  control.html  control.mjs  run.mjs
waha/tests/: control.test.mjs
waha/translations/: en.yaml
