[project]
name = "kapso-whatsapp-home-assistant"
version = "0.2.0"
description = "Home Assistant notifications through WhatsApp using Kapso"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
  "aiohttp>=3.12.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "pyyaml>=6.0.2",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "PT", "SIM", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.kapso_whatsapp"]
